--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
 			<button class="num">1</button>
 			<button class="num">2</button>
 			<button class="num">3</button>
-			<button class="divide">/</button>
+			<button class="divide operator">/</button>
 			<button class="num">4</button>
 			<button class="num">5</button>
 			<button class="num">6</button>
-			<button class="multiply">*</button>
+			<button class="multiply operator ">*</button>
 			<button class="num">7</button>
 			<button class="num">8</button>
 			<button class="num">9</button>
-			<button class="minus">-</button>
+			<button class="minus operator">-</button>
 			<button class="decimal">.</button>
 			<button class="num">0</button>
 			<button class="result">=</button>
-			<button class="plus">+</button>
+			<button class="plus operator">+</button>
 		</div>
 	</div>
 </body>
