add overflow and result

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<button class="minus operator">-</button>
 			<button class="decimal">.</button>
 			<button class="num">0</button>
-			<button class="result">=</button>
+			<button id="result">=</button>
 			<button class="plus operator">+</button>
 		</div>
 	</div>
