removed decimal for now

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 			<button class="num">8</button>
 			<button class="num">9</button>
 			<button class="minus operator">-</button>
-			<button class="decimal">.</button>
-			<button class="num">0</button>
+			<!-- <button class="decimal">.</button> -->
+			<button class="num" id="zero">0</button>
 			<button id="result">=</button>
 			<button class="plus operator">+</button>
 		</div>
